Pin reqwest git revision

--- a/polldaddy/Cargo.toml
+++ b/polldaddy/Cargo.toml
@@ -10,7 +10,7 @@ serde = { version = "1.0.104", features = [ "derive" ] }
 serde_json = "1.0.44"
 select = "0.4.3"
 bytes = "0.5.3"
-reqwest = { git = "https://github.com/seanmonstar/reqwest", features = [ "gzip" ] }
+reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "f78846b6f15e82e60c8a83e7b3a7137e19f94884", features = [ "gzip" ] }
 ducc = "0.1.2"
 url = "2.1.0"
 futures = "0.3.1"
