Update Deps 2: Electric Boolgaloo

--- a/free-proxy-list-rs/Cargo.toml
+++ b/free-proxy-list-rs/Cargo.toml
@@ -5,7 +5,7 @@ authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
 edition = "2018"
 
 [dependencies]
-reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "24abf2f" }
+reqwest = "0.10.3"
 select = "0.4.3"
 bytes = "0.5.4"
 isocountry = "0.2.0"
