--- a/polldaddy-spam/Cargo.toml
+++ b/polldaddy-spam/Cargo.toml
@@ -9,6 +9,6 @@ tokio = { version = "0.2.12", features = [ "rt-threaded", "time", "signal" ] }
 polldaddy = { path = "../polldaddy" }
 futures = { version = "0.3.4", features = [ "async-await" ] }
 free-proxy-list = { path = "../free-proxy-list-rs" }
-reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "24abf2f" }
+reqwest = "0.10.3"
 parking_lot = "0.10.0"
 crossbeam-queue = "0.2.1"
