--- a/polldaddy/Cargo.toml
+++ b/polldaddy/Cargo.toml
@@ -10,7 +10,7 @@ serde = { version = "1.0.104", features = [ "derive" ] }
 serde_json = "1.0.48"
 select = "0.4.3"
 bytes = "0.5.4"
-reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "24abf2f", features = [ "gzip" ] }
-ducc = "0.1.2"
-url = "2.1.0"
-futures = "0.3.1"
+reqwest = { version = "0.10.3", features = [ "gzip" ] }
+ducc = "0.1.3"
+url = "2.1.1"
+futures = "0.3.4"
