--- a/free-proxy-list-rs/Cargo.toml
+++ b/free-proxy-list-rs/Cargo.toml
@@ -3,13 +3,14 @@ name = "free-proxy-list"
 version = "0.0.1"
 authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
 edition = "2018"
+license = "MIT/Apache-2.0"
 
 [dependencies]
+bytes = "0.5.4"
+futures = "0.3.4"
+isocountry = "0.2.0"
 reqwest = "0.10.3"
 select = "0.4.3"
-bytes = "0.5.4"
-isocountry = "0.2.0"
-futures = "0.3.4"
 
 [dev-dependencies]
 tokio = "0.2.12"
