--- a/deny.toml
+++ b/deny.toml
@@ -19,7 +19,7 @@ unlicensed = "deny"
 copyleft = "deny"
 confidence-threshold = 0.93
 default = "deny"
-allow = [ "Apache-2.0", "MIT", "Unlicense", "Zlib", "BSD-2-Clause" ]
+allow = [ "Apache-2.0", "MIT", "Unlicense", "Zlib", "BSD-2-Clause", "BSD-3-Clause" ]
 exceptions = []
 
 [[licenses.clarify]]
@@ -43,16 +43,13 @@ skip = [
     # blocked on tokio bumping mio to 0.7
     { name = "winapi", version = "0.2.8" },
     
-    # blocked on select bumping the html5ever dep to 0.25.0
-    { name = "unicode-xid", version = "0.1.0" },
-    { name = "syn", version = "0.15.44" },
-    { name = "rand", version = "0.6.5" },
-    { name = "quote", version = "0.6.13" },
-    { name = "rand_core", version = "0.3.1" },
-    { name = "rand_core", version = "0.4.2" },
-    { name = "rand_chacha", version = "0.1.1" },
-    { name = "proc-macro2", version = "0.4.30" },
-    { name = "autocfg", version = "0.1.7" },
+    # blocked on tokio buming parking_lot to 0.11.0
+    { name = "parking_lot_core", version = "0.8.0" },
+    { name = "parking_lot", version = "0.10.2" },
+    { name = "lock_api", version = "0.3.4" },
+    
+    # blocked on isocountry dropping failure as a dependency
+    { name = "miniz_oxide", version = "0.3.7" },
 ]
 
 # Mostly soundness denies since the advisory lacks a section for soundess bugs
