--- a/polldaddy-spam/Cargo.toml
+++ b/polldaddy-spam/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 license = "MIT/Apache-2.0"
 
 [dependencies]
-crossbeam-queue = "0.2.3"
+crossbeam-queue = "0.3.1"
 free-proxy-list = { path = "../free-proxy-list-rs" }
-futures = { version = "0.3.5", features = [ "async-await" ] }
-parking_lot = "0.11.0"
+futures = { version = "0.3.8", features = [ "async-await" ] }
+parking_lot = "0.11.1"
 polldaddy = { path = "../polldaddy" }
-reqwest = "0.10.6"
-tokio = { version = "0.2.21", features = [ "rt-threaded", "time", "signal", "parking_lot" ] }
+reqwest = "0.11.0"
+tokio = { version = "1.0.1", features = [ "rt-multi-thread", "time", "signal", "parking_lot" ] }
